more objects, better tcle parsing